force-app/main/default/objects/Cancellation__c/Cancellation__c.object-meta.xml
<CustomObject>
    <label>Cancellation</label>
    <nameField>
        <label>Cancellation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cancellation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>