force-app/main/default/objects/Cancellation__c/fields/Amount_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Amount_Deduction__c</fullName>
    <label>Amount Deduction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>