force-app/main/default/objects/Cancellation__c/fields/Comments_Details__c.field-meta.xml
<CustomField>
    <fullName>Comments_Details__c</fullName>
    <label>Comments/Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>