force-app/main/default/objects/Cancellation__c/fields/Curency_Code__c.field-meta.xml
<CustomField>
    <fullName>Curency_Code__c</fullName>
    <label>Curency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>