force-app/main/default/objects/Cancellation__c/fields/Customization__c.field-meta.xml
<CustomField>
    <fullName>Customization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customization</label>
    <referenceTo>Customization__c</referenceTo>
    <relationshipLabel>Cancellation</relationshipLabel>
    <relationshipName>Cancellation</relationshipName>
    <type>Lookup</type>
</CustomField>