force-app/main/default/objects/Cancellation__c/fields/OLI_add_on__c.field-meta.xml
<CustomField>
    <fullName>OLI_add_on__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OLI add-on</label>
    <referenceTo>OLI_add_on__c</referenceTo>
    <relationshipLabel>Cancellation</relationshipLabel>
    <relationshipName>Cancellation</relationshipName>
    <type>Lookup</type>
</CustomField>