force-app/main/default/objects/Cancellation__c/fields/Order_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Items__c</fullName>
    <label>Order Line Items</label>
    <referenceTo>Order_Line_Items__c</referenceTo>
    <relationshipLabel>Cancellation</relationshipLabel>
    <relationshipName>Cancellation</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>