force-app/main/default/objects/Cancellation__c/fields/Refund_Amound__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amound__c</fullName>
    <label>Refund Amound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>